--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -19,11 +19,11 @@
 
   <!-- GF css !python -->
   <!-- 如果修改这些内容还需要修改下面script中重新加载的css文件名 -->
-  <link href="../css/GF_logistics_slider.css" rel="stylesheet">
-  <link href="../css/GF_logistics_button.css" rel="stylesheet">
-  <link href="../css/GF_logistics_group.css" rel="stylesheet">
-  <link href="../css/GF_logistics.css" rel="stylesheet">
-  <link href="../css/GF_logistics_PlanCombination.css" rel="stylesheet">
+  <link href="../css/slider.css" rel="stylesheet">
+  <link href="../css/button.css" rel="stylesheet">
+  <link href="../css/group.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/plan_combination.css" rel="stylesheet">
   <!-- end GF css !python -->
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js"
@@ -618,36 +618,40 @@
   </script>
 
   <!-- GF js_1 !python -->
-  <script src="../js/GF_logistics_debug.js" crossorigin></script>
+  <script src="../js/debug.js" crossorigin></script>
   <script src="../lang/languages.js"></script>
-  <script src="../js/Quick_Sort.js"></script>
-  <script src="../js/GF_logistics_function.js"></script>
-  <script src="../js/GF_logistics_data.js"></script>
-  <script src="../js/GF_logistics_Modal.js"></script>
-  <script src="../js/GF_logistics_localStorage.js"></script>
-  <script src="../js/GF_logistics_TimetableSlider.js"></script>
-  <script src="../js/GF_logistics_input.js"></script>
-  <script src="../js/GF_logistics_Tab.js"></script>
-  <script src="../js/GF_logistics_loadHTML.js"></script>
-  <script src="../js/GF_logistics_PlanDetails.js"></script>
-  <script src="../js/GF_logistics_MissionTable.js"></script>
-  <script src="../js/GF_logistics_ResultAndDetailsEvent.js"></script>
-  <script src="../js/GF_logistics_html.js"></script>
-  <script src="../js/GF_logistics_Saved.js"></script>
-  <script src="../js/GF_logistics_config.js"></script>
-  <script src="../js/GF_logistics_LoadFirst.js"></script>
-  <script src="../js/GF_logistics_htmlEvent.js"></script>
+  <script src="../js/quick_sort.js"></script>
+  <script src="../js/function.js"></script>
+  <script src="../js/data.js"></script>
+  <script src="../js/modal.js"></script>
+  <script src="../js/local_storage.js"></script>
+  <script src="../js/timetable_slider.js"></script>
+  <script src="../js/input.js"></script>
+  <script src="../js/tab.js"></script>
+  <script src="../js/load_html.js"></script>
+  <script src="../js/plan_details.js"></script>
+  <script src="../js/mission_table.js"></script>
+  <script src="../js/result_and_details_event.js"></script>
+  <script src="../js/html.js"></script>
+  <script src="../js/saved.js"></script>
+  <script src="../js/config.js"></script>
+  <script src="../js/load_first.js"></script>
+  <script src="../js/html_event.js"></script>
   <!-- end GF js_1 !python -->
 
   <!-- GF js_2 !python -->
-  <script src="../js/GF_logistics_ResultsPlan.js"></script>
-  <script src="../js/GF_logistics_FineTuning.js"></script>
-  <script src="../js/GF_logistics_Plan.js"></script>
-  <script src="../js/GF_logistics_main.js"></script>
-  <script src="../js/GF_logistics_calcTargetValueTool.js"></script>
-  <script src="../js/GF_logistics_LoadLast.js"></script>
-  <script src="../js/GF_logistics_LoadSecond.js"></script>
-  <script src="../js/GF_logistics_PlanCombination_Charts.js"></script>
+  <script src="../js/results_plan.js"></script>
+  <script src="../js/fine_tuning.js"></script>
+  <script src="../js/plan.js"></script>
+  <script src="../js/ranking_main.js"></script>
+  <script src="../js/calc_target_value.js"></script>
+  <script src="../js/plan_combination_function.js"></script>
+  <script src="../js/plan_combination_input.js"></script>
+  <script src="../js/plan_combination_charts.js"></script>
+  <script src="../js/plan_combination_html.js"></script>
+  <script src="../js/plan_combination_html_event.js"></script>
+  <script src="../js/load_last.js"></script>
+  <script src="../js/load_second.js"></script>
   <!-- end GF js_2 !python -->
 </body>
 
