--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -632,6 +632,7 @@
   <script src="../js/plan_combination_time_period.js"></script>
   <script src="../js/plan_combination_consumption_plan.js"></script>
   <script src="../js/plan_combination_logistics_plan.js"></script>
+  <script src="../js/plan_combination_chart_option.js"></script>
   <script src="../js/plan_combination_charts.js"></script>
   <script src="../js/plan_combination_html.js"></script>
   <script src="../js/plan_combination_html_event.js"></script>
